// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon 1`] = `
<div>
  <div
    class="corn-tab corn-f corn-tab-default corn-tab-middle"
    data-testid="tab"
  >
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click corn-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        <div
          class="taro-img corn-img corn-tab-item-icon"
        >
          <img
            class="taro-img__mode-heightfix"
            src="2121.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`not currenIndex 1`] = `
<div>
  <div
    class="corn-tab corn-f corn-tab-default corn-tab-middle"
    data-testid="tab"
  >
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        <div
          class="taro-img corn-img corn-tab-item-icon"
        >
          <img
            class="taro-img__mode-heightfix"
            src="2121.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`option 1`] = `
<div>
  <div
    class="corn-tab corn-f corn-tab-default corn-tab-middle"
    data-testid="tab"
  >
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click corn-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item4
      </div>
    </div>
  </div>
</div>
`;

exports[`option middle 1`] = `
<div>
  <div
    class="corn-tab corn-f corn-tab-default corn-tab-middle"
    data-testid="tab"
  >
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click corn-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item4
      </div>
    </div>
  </div>
</div>
`;

exports[`option of button 1`] = `
<div>
  <div
    class="corn-tab corn-f corn-tab-button corn-tab-middle"
    data-testid="tab"
  >
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-light"
      type="button"
    >
      item1
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary __active"
      type="button"
    >
      item2
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-light"
      type="button"
    >
      item4
    </button>
  </div>
</div>
`;

exports[`option of id 1`] = `
<div>
  <div
    class="corn-tab corn-f corn-tab-default corn-tab-middle"
    data-testid="tab"
  >
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click corn-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="corn-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item22121
      </div>
    </div>
  </div>
</div>
`;
